<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.billy.android.loadingstatusview.wrapview.WrapViewActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_single_view"
        android:onClick="toLoadFailed"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_scroll_view"
        android:onClick="toMultiLoadingView"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_grid_view_load"
        android:onClick="toGridViewLoadingView"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_recycler_view_load"
        android:onClick="toRecyclerViewLoadingView"
        />

</LinearLayout>
